--- a/index.html
+++ b/index.html
@@ -175,7 +175,12 @@
                                 <li>
                                     <i class="icofont-arrow-right"></i>
                                     <strong>Degree:</strong>
-                                    <a href="https://happenings.lpu.in/why-choose-b-tech-cse/" target="_blank">ITI, Electronics</a>
+                                    <a href="https://happenings.lpu.in/why-choose-b-tech-cse/" target="_blank">Electronics </a>
+                                </li>
+                                <li>
+                                    <i class="icofont-arrow-right"></i>
+                                    <strong>Course:</strong>
+                                    <a href="https://happenings.lpu.in/why-choose-b-tech-cse/" target="_blank">MERN Stack developer</a>
                                 </li>
                             </ul>
                         </div>
