--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                     <div class="resume-item">
                         <h4>Fullstack Web Developer Trainee</h4>
                         <h5>Jan 2023 - Present</h5>
-                        <p class="font-italic">Synefo Solutions, Eranamkulam</p>
+                        <p class="font-italic">Synefo Solutions, Eranakulam</p>
                         <ul>
                             <li>Expert in back-end & front-end </li>
                            
